# a2gx

./: .gitignore  README.md
hw/: Makefile  a2gx.qsys  a2gx_create.tcl  a2gx_top.v
hw/qip/: altgx_reconfig.v  altgx_reconfig_bb.v  reconfig_pll.ppf  reconfig_pll.v  reconfig_pll_bb.v
sw/a2gx/: CMakeLists.txt
sw/a2gx/include/a2gx/: barrier.h  device.h  eth_mac.h  io.h  ring.h
sw/a2gx/src/: CMakeLists.txt  config.h.in  device.c  eth_mac.c  ring.c
sw/a2gx/test/: CMakeLists.txt  device_test.cc  echo_test.cc  test.hh
sw/driver/: .gitignore  Makefile  a2gx.c  a2gx.h  a2gx_device.h  a2gx_dma.c  a2gx_dma.h  a2gx_mac.c  a2gx_mac.h  a2gx_main.c  a2gx_net.c  a2gx_net.h  a2gx_pci.c  a2gx_pci.h  load.sh
